Terminado el index y avance con las noticias

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -44,10 +44,6 @@ main{
     padding: 20px;
 }
 
-.parrafo{
-    text-align: center;
-    font-family: 'Open Sans', sans-serif;
-}
 
 h2{
     text-align: center;
@@ -95,9 +91,6 @@ a{
     margin:10px;
 }
 
-/* .form-control{
-    width:100%;
-} */
 
 .bg-body-tertiary{
     background-color: #bae1db !important;
@@ -114,19 +107,34 @@ a{
     font-weight: 800;
 }
 
-/* #carouselExampleCaptions{
-    width: 1400px;
-    margin: 50 - 100;
-    overflow-x: hidden;
-    
-}
 
-.carousel-inner img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.scroll-box {
+    overflow-x: auto; /* permite el desplazamiento horizontal */
+    white-space: nowrap; /* evita que los elementos se rompan */
+    display: flex; /* permite el uso de flexbox */
+    flex-wrap: nowrap; /* evita que los elementos se rompan dentro del contenedor */
+  }
+  
+  .scroll-box__content {
+    display: flex; /* permite el uso de flexbox */
+    width: 183px;
+    height: 275px;
+  }
+  
+  .scroll-box__item {
+    flex-shrink: 0; /* evita que los elementos se reduzcan en tamaño */
+    margin-right: 16px; /* margen derecho entre elementos */
+  }
+  
+  /* Hacer la caja responsive */
+  @media screen and (max-width: 768px) {
+    .scroll-box__item {
+      margin-right: 8px; /* reducir margen en dispositivos móviles */
+    }
+  }
+  
 
-}  */
+
 
 
 
